--- a/src/app/public/containers/register/register.component.html
+++ b/src/app/public/containers/register/register.component.html
@@ -15,7 +15,7 @@
           />
           <mat-error>
             <p *ngIf="email.hasError('required')">
-              Password is required field.
+              Email is required field.
             </p>
           </mat-error>
         </mat-form-field>
@@ -29,7 +29,7 @@
           />
           <mat-error>
             <p *ngIf="username.hasError('required')">
-              Password is required field.
+              Username is required field.
             </p>
           </mat-error>
         </mat-form-field>
@@ -74,7 +74,7 @@
     </mat-card-content>
     <mat-card-footer>
       <p>
-        Already have an account? <a [routerLink]="['/public/login']">Login</a>
+        Already have an account? <a [routerLink]="['/public/login']">Sign In</a>
       </p>
     </mat-card-footer>
   </mat-card>
